# webeater

./: .clinerules  AGENTS.md  CHANGELOG.md  CUSTOM.md  LICENSE  PYPI_PACKAGING.md  README.md  __main__.py  publish.py  pyproject.toml  requirements.txt  run_tests.py  tox.ini  weat.json  webeater.code-workspace
.claude/: CLAUDE.md
.cursor/rules/: README.mdc
.github/workflows/: test.yml
hints/: README.md  sports.json
metak-orchestrator/: AGENTS.md  CUSTOM.md  DECISIONS.md  EPICS.md  STATUS.md  TASKS.md
metak-orchestrator/.claude/: CLAUDE.md
metak-shared/: LEARNED.md  architecture.md  beautifulsoup.suggestions.py  coding-standards.md  glossary.md  overview.md
metak-shared/api-contracts/: README.md  content-extractor.md  hints-schema.md  html-renderer.md  json-output.md  public-api.md
metak-shared/templates/: AGENTS.md.template  CLAUDE.md.worker.template  CUSTOM.md.template
tests/: README.md  __init__.py  bench_extractors.py  test_config.py  test_extractor_selection.py  test_fastbs.py  test_hints.py  test_lifecycle.py  test_suite.py
tests/data/: README.md  invalid_data_types.json  invalid_hint.json  invalid_json.json  invalid_negative_height.json  invalid_zero_width.json  valid_hint.json  valid_sample.json
tests/data/fixtures/: sample_article.html
weat/: __init__.py  config.py  eater.py  log.py  rendering.py  util.py
webeater/: __init__.py  __main__.py  config.py  eater.py  extracting.py  log.py
webeater/hints/: README.md  default.json  news.json
