[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "webeater"
version = "0.1.7"
description = "A web content extraction tool designed to fetch and process web pages efficiently"
readme = "README.md"
license = "MIT"
authors = [
    {name = "Tiago Ribeiro", email = "webeater@tiagoribeiro.pt"}
]
maintainers = [
    {name = "Tiago Ribeiro", email = "webeater@tiagoribeiro.pt"}
]
keywords = ["web", "scraping", "extraction", "selenium", "beautifulsoup", "content"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup :: HTML",
    "Topic :: Utilities",
    "Typing :: Typed",
]
requires-python = ">=3.9"
dependencies = [
    "annotated-types>=0.7.0",
    "attrs>=25.3.0",
    "beautifulsoup4>=4.13.4",
    "bs4>=0.0.2",
    "certifi>=2025.8.3",
    "cffi>=1.17.1",
    "coloredlogs>=15.0.1",
    "h11>=0.16.0",
    "humanfriendly>=10.0",
    "idna>=3.10",
    "outcome>=1.3.0.post0",
    "pycparser>=2.22",
    "pydantic>=2.11.7",
    "pydantic_core>=2.33.2",
    "pyreadline3>=3.5.4",
    "PySocks>=1.7.1",
    "selenium>=4.34.2",
    "sniffio>=1.3.1",
    "sortedcontainers>=2.4.0",
    "soupsieve>=2.7",
    "trio>=0.30.0",
    "trio-websocket>=0.12.2",
    "typing-inspection>=0.4.1",
    "typing_extensions>=4.14.1",
    "urllib3>=2.5.0",
    "websocket-client>=1.8.0",
    "wsproto>=1.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-asyncio",
    "black",
    "flake8",
    "mypy",
    "twine",
    "build",
]
test = [
    "pytest>=6.0",
    "pytest-asyncio",
]

[project.urls]
Homepage = "https://github.com/tiagrib/webeater"
Repository = "https://github.com/tiagrib/webeater.git"
Issues = "https://github.com/tiagrib/webeater/issues"
Documentation = "https://github.com/tiagrib/webeater#readme"

[project.scripts]
webeater = "webeater.__main__:cli_main"
weat = "webeater.__main__:cli_main"

[tool.setuptools]
packages = ["webeater", "webeater.thirdparty"]
py-modules = ["__main__"]

[tool.setuptools.package-data]
webeater = ["hints/*.json"]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.mypy]
python_version = "0.1.7"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]